--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
         <span></span>
         <span></span>
         <div class="estudante-div">
-            <img class="estudante-imagem" src="Daphne.jpeg" alt="foto da Daphny">
+            <img class="estudante-imagem" src="Daphne.jpeg" alt="foto da Daphne">
             <h3 class="estudante-nome">Daphne</h3>
             <a href="https://github.com/rafaelamunhoz12"><img class="estudante-icone" src="github.png" alt="icone github"></a>
             <a href="http://linkedin.com/in/rafaela-felix-munhoz-oliveira-02160a10a"><img class="estudante-icone" src="linkedin.png" alt="icone linkedin"></a>
