--- a/index.html
+++ b/index.html
@@ -175,7 +175,18 @@
             <a href="https://www.linkedin.com/in/leandro/"><img class="estudante-icone" src="linkedin.png" alt="icone linkedin"></a>
             <a href="https://www.instagram.com/leandro/"><img class="estudante-icone" src="instagram.png" alt="icone instagram"></a>
         </div>
-
+        <img class="estudante-imagem" src="cauã.jpeg" alt="foto da cauã">
+        <h3 class="estudante-nome">cauã</h3>
+        <a href="https://github.com/LizandraDuarte40"><img class="estudante-icone" src="github.png" alt="icone github"></a>
+        <a href="https://www.linkedin.com/in/lizandrarlm-duarte/"><img class="estudante-icone" src="linkedin.png" alt="icone linkedin"></a>
+        <a href="https://www.instagram.com/lizandrarlm"><img class="estudante-icone" src="instagram.png" alt="icone instagram"></a>
+    </div>
+    <img class="estudante-imagem" src="maria.jpeg" alt="foto da maria">
+        <h3 class="estudante-nome">maria</h3>
+        <a href="https://github.com/LizandraDuarte40"><img class="estudante-icone" src="github.png" alt="icone github"></a>
+        <a href="https://www.linkedin.com/in/lizandrarlm-duarte/"><img class="estudante-icone" src="linkedin.png" alt="icone linkedin"></a>
+        <a href="https://www.instagram.com/lizandrarlm"><img class="estudante-icone" src="instagram.png" alt="icone instagram"></a>
+    </div>
     </div>
     </section>
     <footer class="rodape">
