--- a/index.html
+++ b/index.html
@@ -105,6 +105,8 @@
             <a href="https://www.linkedin.com/in/joao/"><img class="estudante-icone" src="linkedin.png" alt="icone linkedin"></a>
             <a href="https://www.instagram.com/joao/"><img class="estudante-icone" src="instagram.png" alt="icone instagram"></a>
         </div>
+        <span></span>
+        <span></span>
         <div class="estudante-div">
             <img class="estudante-imagem" src="JuliaCampos.jpeg" alt="foto da Julia">
             <h3 class="estudante-nome">Julia Campos</h3>
@@ -126,6 +128,8 @@
             <a href="https://www.linkedin.com/in/leandro/"><img class="estudante-icone" src="linkedin.png" alt="icone linkedin"></a>
             <a href="https://www.instagram.com/leandro/"><img class="estudante-icone" src="instagram.png" alt="icone instagram"></a>
         </div>
+        <span></span>
+        <span></span>
         <div class="estudante-div">
             <img class="estudante-imagem" src="Luiz.jpeg" alt="foto da Daniela">
             <h3 class="estudante-nome">Luiz</h3>
@@ -147,6 +151,8 @@
             <a href="https://www.linkedin.com/in/leandro/"><img class="estudante-icone" src="linkedin.png" alt="icone linkedin"></a>
             <a href="https://www.instagram.com/leandro/"><img class="estudante-icone" src="instagram.png" alt="icone instagram"></a>
         </div>
+        <span></span>
+        <span></span>
         <div class="estudante-div">
             <img class="estudante-imagem" src="Samara.jpeg" alt="foto da Daniela">
             <h3 class="estudante-nome">Samara</h3>
@@ -168,6 +174,8 @@
             <a href="https://www.linkedin.com/in/leandro/"><img class="estudante-icone" src="linkedin.png" alt="icone linkedin"></a>
             <a href="https://www.instagram.com/leandro/"><img class="estudante-icone" src="instagram.png" alt="icone instagram"></a>
         </div>
+        <span></span>
+        <span></span>
         <div class="estudante-div">
             <img class="estudante-imagem" src="Vitor.jpeg" alt="foto da Daniela">
             <h3 class="estudante-nome">Joao Vitor</h3>
@@ -187,6 +195,8 @@
         <a href="https://www.linkedin.com/in/lizandrarlm-duarte/"><img class="estudante-icone" src="linkedin.png" alt="icone linkedin"></a>
         <a href="https://www.instagram.com/lizandrarlm"><img class="estudante-icone" src="instagram.png" alt="icone instagram"></a>
     </div>
+    <span></span>
+    <span></span>
     </div>
     </section>
     <footer class="rodape">
